tests/transpiler/x/pas/fun_expr_in_let.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/transpiler/x/pas/fun_expr_in_let.pas
fun_expr_in_let.pas(10,13) Error: Wrong number of parameters specified for call to "anon0"
fun_expr_in_let.pas(3,10) Error: Found declaration: anon0(LongInt):LongInt;
fun_expr_in_let.pas(11,17) Fatal: Syntax error, ")" expected but "(" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
